# Asteroids-Clone

./: CMakeLists.txt  LICENSE  README.md
src/: asteroid.c  asteroid.h  bullet.c  bullet.h  constants.h  leaderboard.c  leaderboard.h  main.c  menu.c  menu.h  player.c  player.h  settings.c  settings.h
